[tool.poetry]
name = "desafio-dio-ml-covid"
version = "0.1.0"
description = ""
authors = ["Guilherme <guiemanoeloliveira@hotmail.com>"]
readme = "README.md"
packages = [{include = "desafio_dio_ml_covid"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^1.5.3"
numpy = "^1.24.2"
plotly = "^5.13.1"
statsmodels = "^0.13.5"
matplotlib = "^3.7.0"
pmdarima = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
